# SB2BUA

./: AI-问答2.md  CMakeLists.txt  ciphers.cpp  ciphers.h  commons.h  config.cpp  config.h  mediaplayer.cpp  mediaplayer.h  sb2bua.cpp  sb2bua.h  test.cpp  test.h  uasess.cpp  uasess.h
bin.openssl/: 1001.crt  1001.csr  1002.csr  1002.key  1003.crt  1003.csr  1003.key  1004.crt  1004.csr  1004.key  1005.csr  1006.crt  1006.csr  1006.key  1007.crt  1007.csr  1007.key  1008.csr  1009.crt  1009.csr  1009.key  1010.crt  1010.csr  1010.key  1011.crt  1011.csr  1011.key  1012.crt  1012.csr  1012.key  1013.crt  1013.csr  1013.key  1014.crt  1014.csr  1014.key  1015.crt  1015.csr  1015.key  1016.crt  (+19 more)
certkey/: 1001.key  1002.crt  1005.crt  1005.key  1008.crt  1008.key
wav_files/: 语音文本信息.txt
